--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "typeorm" : "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@types/yup": "^0.32.0",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
