--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.12",
     "typescript": "^5.0.2",
